--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,15 @@
               "src/favicon.ico",
               "src/assets"
             ],
+
             "styles": [
+              "./node_modules/font-awesome/css/font-awesome.min.css", 
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css", 
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
